--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -93,15 +93,15 @@ in \cite{Sifon13}, El Gordo is confirmed to be a binary merger
 without significant substructures. This picture is further supported by the
 weak lensing analysis by \cite{Jee13}. The weak lensing analysis shows
 a mass ratio of $\sim$2:1  between the two main subclusters, named according to their location as the northeast (NW) and southeast (SE) subclusters respectively. 
-(See Figure \ref{fig:config}). El Gordo has interesting intracluster medium morphology as shown in the X-ray. In the northwest, it shows a wake feature, i.e.,
+(See Figure~\ref{fig:config}). El Gordo has interesting intracluster medium morphology as shown in the X-ray. In the northwest, it shows a wake feature, i.e.,
 turbulent flow due to object of higher density moving through fluids, while in the southeast, it shows
 highest X-ray emissivity indicative of a cold gas core southeast of the
-wake. The cold gas core may have passed from the northwest to the southwest
+wake. The cold gas core may have passed from the northwest to the southeast
 to have caused this morphology (\citealt{M12}, hereafter M12). 
 The extended mass distribution of El Gordo also makes it a good
 gravitational lens. \cite{Zitrin13} have found multiple strong
 gravitationally lensed images around the center region of El Gordo. 
-On the outer skirt of El Gordo, strong radio emission is detected in
+On the outskirt, strong radio emission is detected in
 the NW and the SE respectively. These radio emission has steep spectral
 index gradient and are identified as radio relic associated with shockwaves
 created from a merger \citep{L13}. 
@@ -258,7 +258,7 @@ for the uncertainties of the inputs at the same time.
 We adapt a Bayesian interpretation of the PDFs of the Monte Carlo
 simulation. The Bayes chain rule underlies the simulation can be written as:
 \begin{equation}
-    P(M|\vec{D}) \propto P(\vec{D}|M)P(M)
+    P(M|\vec{D}) \propto P(\vec{D}|M)P(M),
 \end{equation}
 where the likelihood is defined to be the PDF of $\vec{D}$ given our
 physical model $M$ which we parametrize using variables in Table 1
@@ -266,7 +266,7 @@ physical model $M$ which we parametrize using variables in Table 1
 For example,the
 calculation of the output variables of the $j$-th realization can be denoted as: 
 \begin{equation}
-    (\vec{\theta}^\prime)^{(j)} = f(\vec{\theta}^{(j)}, \vec{D}) 
+    (\vec{\theta}^\prime)^{(j)} = f(\vec{\theta}^{(j)}, \vec{D}), 
 \end{equation}    
 and computed over all $j$ realizations. Finally, we took the physical
 constraints on the dynamical variables into account by
@@ -354,12 +354,12 @@ We estimated the radial velocity differences of the
 subclusters by first calculating the velocity of each subcluster with
 respective to us, using  
 \begin{equation}
-	v_i = \left[ \frac{(1+z_i)^2 - 1 }{(1+z_i)^2 + 1 }\right]c
+	v_i = \left[ \frac{(1+z_i)^2 - 1 }{(1+z_i)^2 + 1 }\right]c,
 \end{equation}
 where $i=1, 2$ represents the two subclusters, and $c$ is the speed of
 light. The radial velocity was calculated by: 
 \begin{equation}
-	\Delta v_{rad}(t_{obs}) = \frac{|v_2 - v_1|}{1-\frac{v_1 v_2}{c^2}}
+	\Delta v_{rad}(t_{obs}) = \frac{|v_2 - v_1|}{1-\frac{v_1 v_2}{c^2}}.
 \end{equation}
 Due to the estimates of the subcluster redshifts are close to
 one another with overlapping confidence intervals, we obtained a low 
@@ -484,7 +484,8 @@ maximum observable integrated polarization fraction.
 	\caption{Predictions of polarization percentage of the radio relic at a
 		given projection angle from different models, reproduced from
 		\citealt{E98}. Each model assumes electrons producing the radio emission
-		to be accelerated inside uniform magnetic field of various strengths ({\it strong} or {\it weak}). The curves are plotted with spectral index of the radio emission
+		to be accelerated inside uniform magnetic field of various strengths ({\it strong} or 
+		{\it weak}). The curves are plotted with spectral index of the radio emission
 		($\alpha_{radio}$), spectral index of the electrons ($\gamma$) and
 		compression ratio of the magnetic field ($R$) corresponding to the
 		estimated values from \citet{L13}.
@@ -493,7 +494,8 @@ maximum observable integrated polarization fraction.
 		indicating the uncertainty \citep{L13}.\label{fig:Ensslin_fig}}
 \end{figure}
 This assumption is based on the class of models given by \cite{E98}(See
-Figure~\ref{fig:Ensslin_fig}). In particular, we refer to a model from \cite{E98} that would give the most
+Figure~\ref{fig:Ensslin_fig}). In particular, we refer to a model from \cite{E98} 
+that would give the most
 conservative estimate on the upper bound of $\alpha$:
 \begin{align}
 \alpha &= 90 \degree -
@@ -503,7 +505,7 @@ conservative estimate on the upper bound of $\alpha$:
 \frac{
 	\frac{2}{15} \frac{13R - 7}{R - 1} \frac{\gamma + 7/3}{\gamma + 1}
 	\langle P_{strong} \rangle}{
-	1 + \frac{\gamma + 7/3}{ \gamma +1} \langle P_{strong} \rangle }}\right)
+	1 + \frac{\gamma + 7/3}{ \gamma +1} \langle P_{strong} \rangle }}\right).
 \end{align}
 
 This model corresponds to the strong field case with the relic being supported by
@@ -514,11 +516,13 @@ $\sim60\%$ when $\alpha \rightarrow 0$. From this model, the observed integrated
 polarization fraction of $33\%\pm1\%$ corresponds to an estimated value
 of $\hat{\alpha}
  = 35\degree$. 
-%We consider 39\degree as an upper bound on the projection angle since this idealized model assume isotropic distribution of magnetic field and
+%We consider 39\degree as an upper bound on the projection angle since this 
+% idealized model assume isotropic distribution of magnetic field and
 %electrons. 
 This  polarization fraction of $\sim60\%$ predicted by \citep{E98} is
 consistent with the upper bound of relic polarization fraction in cosmological
-simulations \citep{S13}. No other model of the magnetic field should predict a higher polarization fraction, thus it is highly unlikely that we see 33\%
+simulations \citep{S13}. No other model of the magnetic field should predict 
+a higher polarization fraction, thus it is highly unlikely that we see 33\%
 integrated polarization at $\alpha > 35\degree$.  
 \par
 
@@ -527,7 +531,8 @@ variations in the magnetic field.
 \cite{E98} assumes an isotropic distribution of electrons in an isotropic magnetic field. Cosmological
 simulations of radio relics from \cite{S13} show varying polarization
 fraction across and along the relic assuming $\alpha = 0$, resulting in a
-lower integrated polarization fraction. For example, it is possible to see a edge-on radio relic ($\alpha = 0$) with integrated polarization fraction of 33\%. 
+lower integrated polarization fraction. For example, it is possible to see 
+a edge-on radio relic ($\alpha = 0$) with integrated polarization fraction of 33\%. 
 Furthermore, \cite{S13} shows that after convolving the
 simulated polarization signal with a Gaussian kernel of 4\arcmin~to
 illustrate effects of non-zero beam size, the polarization fraction drops to between 30\% to
@@ -541,10 +546,9 @@ information from the polarization fraction of the radio relic as:
 P(\alpha) = 
 	\begin{cases}
 	& \text{const. $>$ 0 for  }\alpha < 35 \degree \\ 
-	& 0 \text{ otherwise}\label{eqn: polarprior}
+	& 0 \text{ otherwise}\label{eqn: polarprior}.
 	\end{cases}
 \end{equation}
-
 We refer to \ref{eqn: polarprior} as the polarization prior. Unless
 otherwise stated, the main results of the paper are obtained after applying
 this polarization prior in addition to the default priors.
@@ -580,14 +584,16 @@ close to the center of the substructure, 2) propagated outwards with
 
 Since we do not know the time-evolution of the propagation speed of the
 shock front with respect to the center of mass, we express possible shock
-speeds as a multiple of the inferred collisional speed of the subclusters
-in the center of mass (momentum) frame, then calculate how far the shock would have propagated for our inferred
+speeds as a multiple of the inferred collisional speed of the NW subcluster
+in the center of mass (momentum) frame, 
+then calculate how far the shock would have propagated for our inferred
 $TSC_0$ and $TSC_1$ values. We worked in the center of mass frame where the
-shock speed is expected to drop slightly with TSC. 
+shock speed is expected to drop slightly with TSC. \cite{Springel2007} 
 The projected separation of the shock is approximated as:
 \begin{equation}
 	%s_{proj} = \langle v_{relic} \rangle (\hat{t}_{obs} - \hat{t}_{col})
-	s_{proj} = \langle v_{relic} \rangle (\hat{t}_{obs} - \hat{t}_{col}) \cos(\hat{\alpha})
+	s_{proj} = \langle v_{relic} \rangle (\hat{t}_{obs} - \hat{t}_{col})
+	\cos(\hat{\alpha}),
 	\label{eqn: projectedsep}
 \end{equation}
 where the quantities with hats on the right hand side of the equations were
@@ -595,18 +601,21 @@ inferred from the simulation, and $s_{proj}$ is the estimated projected separati
 upper and lower bounds of the time-averaged velocity
 $\langle v_{relic} \rangle$ of the shock between
 the collision of the subclusters and the observed time as:  
-\begin{equation}
-	\langle v_{relic} \rangle = \beta~\hat{v}_{3D,1}(t_{col})  
-\end{equation}
+\begin{align}
+	\langle v_{relic} \rangle &= \beta~\hat{v}_{3D, NW}(t_{col}) \\
+	&= \beta~\hat{v}_{3D}(t_{col}) \frac{\hat{m}_{SE}}{\hat{m}_{SE} +
+	\hat{m}_{NW}}, 
+\end{align}
 where $0.5 \leq \beta \leq 1.5$ is a factor that we introduce to represent the
-uncertainty of the velocity of the relic shockwave and $\hat{v}_{3D,1}(t_{col})$ refers to the collisional velocity of
+uncertainty of the velocity of the relic shockwave and $\hat{v}_{3D,NW}(t_{col})$ refers to the collisional velocity of
 the NW subcluster in the center-of-mass frame as a comparison. 
 \label{sec: positionprior}
 
 %the springel and farrar shock is NOT applicable to this section get rid of
 %it
 
-%This method depends on the time evolution of the relic velocity, which gives the upper and lower bounds on the possible position of the relic for each scenario. 
+%This method depends on the time evolution of the relic velocity, 
+%which gives the upper and lower bounds on the possible position of the relic for each scenario. 
 %%The velocity depends on a number of physical quantities, including the
 %local gravitational potential, matter density, temperature, pressure among
 %others (\citealt{E98}, Shu .F., more citations?).  The exact time evolution
@@ -616,7 +625,8 @@ the NW subcluster in the center-of-mass frame as a comparison.
 %approximated as the collisional speed of the NW subclusters due to how the
 %shock is powered by the collision. After the collision, it is unlikely that
 %there would be significant energy injected into the shock to speed up the
-%shock such that the shock travels much faster than the collision speed of the subcluster. While the shock does not experience gravitational deceleration as a
+%shock such that the shock travels much faster than the collision speed of 
+%the subcluster. While the shock does not experience gravitational deceleration as a
 %pressure wave, some dissipative processes may have slowed down the shock
 %wave slightly as it propagated. By making use of a
 %range of $\beta$ values, we examine how the rate of slow down would
@@ -630,7 +640,7 @@ the NW subcluster in the center-of-mass frame as a comparison.
 
 \input{output_table}
 \section{RESULTS} 
-We found that the two subclusters collided at with a relative velocity of 
+We found that the two subclusters collided with a relative velocity of 
 $2400\pm^{900}_{400}~\kilo\meter~\second^{-1}$, at an estimated projection
 angle of $\alpha = 21\degree~\pm^{9}_{11}$. From our analysis of the two
 scenarios, we found that El Gordo is more likely to be observed at a returning
@@ -640,7 +650,8 @@ results only applying the default priors on the left hand side of the table
 and those applied with the polarization prior on the right hand side.
 Furthermore, we include the plots of all the marginalized PDFs with the
 polarization prior in Appendix~\ref{app: results}. \par 
-Our estimates of $v_{3D}(t_{col}) = 2400\pm^{900}_{400}~\kilo\meter~\second^{-1}$ at the time of collision is compatible with independent estimates from \citealt{L13}. 
+Our estimates of $v_{3D}(t_{col}) = 2400\pm^{900}_{400}~\kilo\meter~\second^{-1}$ 
+at the time of collision is compatible with independent estimates from \citealt{L13}. 
 By making use of the upstream velocity of the shockwave, \cite{L13}
 reported an estimate of the upper bound of the relative collisional
 velocity by making use of the Mach number of the NW radio relic, at $2500
@@ -686,11 +697,16 @@ v_{3D,1}(t_{col})$, we probe how much the shock could have slowed down
 and still be consistent with the outgoing scenario. The second (relative
 velocity of $2800~\kilo\meter~\second^{-1}$) and third row of
 Fig. \ref{fig: positionprior} show that if $\langle v_{relic} \rangle
-\lesssim 1.1 $, the returning scenario would be favored instead. A definite conclusion about the best fit scenario would require better
+\lesssim 1.1 $, the returning scenario would be favored instead. 
+A definite conclusion about the best fit scenario would require better
 knowledge of the time evolution of the shock velocities. 
 The reported NW shock velocity $2500
-\pm^{400}_{300}~\kilo\meter~\second^{-1}$ by \cite{L13} was with respect to
-the turbulent intracluster medium (ICM). It is unclear what the bulk motion
+\pm^{400}_{300}~\kilo\meter~\second^{-1}$ by \cite{L13} was reported with respect to
+the turbulent intracluster medium (ICM). 
+%\citealt{Springel2007} showed that
+there could be high-velocity induced flow of gas at $\sim 1100
+\kilo\meter~\second^{-1}$ from the outer edge of the subclusters to
+the center during a cluster merger. It is unclear what the bulk motion
 of the ICM would be at the time of observation and how to ensure the frame of
 references of our simulation outputs and the observation are consistent for
 comparison.  
@@ -942,7 +958,7 @@ follows for most of the output variables:
 
 \begin{equation}
 	P(v_{3D}(t_{col}) | \alpha, v_{proj}(t_{col})) = 0\text{ if }v_{3D}(t_{col}) >
-	v_{\text{free fall}} 
+	v_{\text{free fall}}. 
 \end{equation}
 
 
@@ -950,7 +966,7 @@ follows for most of the output variables:
 	P(TSC_0) = 
 	\begin{cases}
 		& \text{const}~\text{if }TSC_0 < \text{age of universe at } z=0.87	\\
-		& 0~\text{otherwise}
+		& 0~\text{otherwise}.
 	\end{cases}
 \end{equation}
 
@@ -962,14 +978,14 @@ outgoing TSC but an invalid returning $TSC_1$.
 	P(TSC_1) = 
 	\begin{cases}
 		& \text{const}~\text{if }TSC_1 < \text{age of universe at } z=0.87	\\
-		& 0~\text{otherwise} \label{eqn:TSM_1}
+		& 0~\text{otherwise} \label{eqn:TSM_1}.
 	\end{cases}
 \end{equation}
 
 To correct for observational limitations, we further convolve the
 posterior probabilities of the different realizations with 
 \begin{equation}
-	P(TSC_0 | T) = 2 \frac{TSC_0}{T}
+	P(TSC_0 | T) = 2 \frac{TSC_0}{T},
 \end{equation}
 to account for how the subclusters move faster at lower $TSC$ and thus it
 is more probable to observe the subclusters at a stage with a larger $TSC$.
